# optimization

./: .gitignore  CMakeLists.txt  README.md  xlsx1.xlsx
K2/: xlsx2.xlsx
K6/: Ligęza_Litewka_Lazarowicz.xlsx  polozenia.txt  xlsx6.xlsx
src/: CMakeLists.txt  XData.txt  lab_no.h  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h
x/: lab_no.h  main.cpp  ode_solver.cpp  ode_solver.h  opt_alg.cpp  solution.cpp  solution.h
